[B]Version 1.0.3 - 2011-12-22[/B]
- Removed use of script.module.danishaddons

[B]Version 1.0.2[/B]
- Updated to danishaddons module 1.1.0

[B]Version 1.0.1[/B]
- Fixed cache path

[B]Version 1.0.0[/B]
- Initial version