@@ -1,0 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
+<strings>
+    <string id="30000">Indlæs flere...</string>
+</strings>
